# FocusLab

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
docs/: architecture.md  artifact-linking-ux.md  data-model.md  handoff-contract.md  implementation-plan.md  product-workflow.md  prototype-status.md  qa-desktop.md  qa-web-shell.md  release-readiness.md
src/: actions.test.ts  actions.ts  domain.test.ts  domain.ts  handoff.test.ts  handoff.ts  main.tsx  picker.ts  storage.test.ts  storage.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
tests/: focuslab.spec.ts
