[package]
name = "app"
version = "0.1.0"
description = "Local sprint execution and JARVIS/Codex handoff app"
authors = ["Melih Karakose"]
license = ""
repository = "https://github.com/moleh1307/FocusLab"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
tauri-plugin-dialog = "2"
